--- a/index.html
+++ b/index.html
@@ -1,6 +1,4 @@
 <!doctype html>
-<!-- The Time Machine GitHub pages theme was designed and developed by Jon Rohan, on Feb 7, 2012. -->
-<!-- Follow him for fun. http://twitter.com/jonrohan. Tail his code on http://github.com/jonrohan -->
 <html>
 <head>
   <meta charset="utf-8">
@@ -11,8 +9,8 @@
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
   <script type="text/javascript" src="javascripts/script.js"></script>
 
-  <title>Cloudflare-tools</title>
-  <meta name="description" content="Tools which enable you to get the full benefit of using the CloudFlare service.">
+  <title>Allanice001 GitHub</title>
+  <meta name="description" content="Developer from Everywhere.">
 
   <meta name="viewport" content="width=device-width,initial-scale=1">
 
@@ -22,10 +20,10 @@
 
   <div class="wrapper">
     <header>
-      <h1 class="title">Cloudflare-tools</h1>
+      <h1 class="title">Allanice001 GitHub</h1>
     </header>
     <div id="container">
-      <p class="tagline">Tools which enable you to get the full benefit of using the CloudFlare service.</p>
+      <p class="tagline">Developer from Everywhere.</p>
       <div id="main" role="main">
         <div class="download-bar">
         <div class="inner">
@@ -37,7 +35,7 @@
         </div>
         <article class="markdown-body">
           <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+<a id="welcome-to-github-pages" class="anchor" href="#Allanice001_GitHub" aria-hidden="true"><span class="octicon octicon-link"></span></a>Allanice001 GitHub</h3>
 
 <p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
 
@@ -72,7 +70,7 @@ $ git checkout gh-pages
     </div>
     <footer>
       <div class="owner">
-      <p><a href="https://github.com/allanice001" class="avatar"><img src="https://avatars3.githubusercontent.com/u/700853?v=3&amp;s=60" width="48" height="48"></a> <a href="https://github.com/allanice001">allanice001</a> maintains <a href="https://github.com/allanice001/CloudFlare-Tools">Cloudflare-tools</a></p>
+      <p><a href="https://github.com/allanice001" class="avatar"><img src="https://avatars3.githubusercontent.com/u/700853?v=3&amp;s=60" width="48" height="48"></a> <a href="https://github.com/allanice001">allanice001</a> maintains <a href="https://github.com/allanice001/allanice001.github.io">Web Portal</a></p>
 
 
       </div>
@@ -83,7 +81,7 @@ $ git checkout gh-pages
   </div>
   <div class="current-section">
     <a href="#top">Scroll to top</a>
-    <a href="https://github.com/allanice001/CloudFlare-Tools/tarball/master" class="tar">tar</a><a href="https://github.com/allanice001/CloudFlare-Tools/zipball/master" class="zip">zip</a><a href="" class="code">source code</a>
+    <a href="https://github.com/allanice001/allanice001.github.io/tarball/master" class="tar">tar</a><a href="https://github.com/allanice001/allanice001.github.io/zipball/master" class="zip">zip</a><a href="" class="code">source code</a>
     <p class="name"></p>
   </div>
 
