path updates for banner

--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
       <div id="main" role="main">
         <div class="download-bar">
         <div class="inner">
-          <a href="https://github.com/allanice001/CloudFlare-Tools/tarball/master" class="download-button tar"><span>Download</span></a>
-          <a href="https://github.com/allanice001/CloudFlare-Tools/zipball/master" class="download-button zip"><span>Download</span></a>
-          <a href="https://github.com/allanice001/CloudFlare-Tools" class="code">View Cloudflare-tools on GitHub</a>
+          <a href="https://github.com/allanice001/allanice001.github.io/tarball/master" class="download-button tar"><span>Download</span></a>
+          <a href="https://github.com/allanice001/allanice001.github.io/zipball/master" class="download-button zip"><span>Download</span></a>
+          <a href="https://github.com/allanice001/allanice001.github.io" class="code">View the source on GitHub</a>
         </div>
         <span class="blc"></span><span class="trc"></span>
         </div>
